# neuti-site

./: .gitignore  README.deploy.md  clean_projects.py  docker-compose.prod.yml  docker-compose.yml  home.conf  init-letsencrypt.sh  parse_projects.py
backend/: .coverage  .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0188a34c302b_create_diagnosis_request_table.py  389ef8b63d21_add_category_to_performance.py  68c35f2c1c80_add_performance_table.py  74be88f448d8_expand_performance_metadata.py  a1b2c3d4e5f6_add_technology_item.py  b2c3d4e5f6g7_add_client_type_to_performance.py  c3d4e5f6g7h8_create_estimate_request_table.py  d4e5f6g7h8i9_add_status_to_estimate_request.py  ff8c4c649074_create_board_tables.py
backend/app/: main.py  seed_technology.py  sync_md.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: board.py  diagnosis.py  estimate_request.py  performance.py  technology_item.py
backend/app/repositories/: base.py  diagnosis_repo.py  estimate_request_repo.py  inquiry_repo.py  notice_repo.py  performance_repo.py  technology_item_repo.py
backend/app/schemas/: board.py  diagnosis.py  estimate_request.py  performance.py  technology_item.py
backend/app/services/: diagnosis_service.py  estimate_request_service.py  inquiry_service.py  notice_service.py  performance_service.py  (+1 more)
backend/tests/: conftest.py  test_board.py  test_diagnosis.py  test_login.py  test_markdown_parser.py  test_performance.py
(+317 files in other folders)
